[package]
name = "semvercli"
version = "0.0.1"
authors = ["Kiril Zvezdarov <kzvezdarov@gmail.com>"]
edition = "2018"

description = "A thin command line interface over the semver crate"
homepage = "https://github.com/kzvezdarov/semvercli"
repository = "https://github.com/kzvezdarov/semvercli"
readme = "README.md"
keywords = ["version", "bump", "semver", "cli"]
categories = ["command-line-utilities", "development-tools::build-utils"]

license = "Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "github.com/kzvezdarov/semvercli" }
is-it-maintained-open-issues = { repository = "github.com/kzvezdarov/semvercli" }
maintenance = { status = "actively-developed" }

[dependencies]
toml_edit = "0.1.3"
semver = "0.9.0"
clap = "2.33.0"

[dev-dependencies]
proptest = "0.9.4"
tempfile = "3.0.8"
